// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render properly 1`] = `
<div
  className="bp3-navbar navBar bp3-dark"
>
  <div
    className="bp3-navbar-group bp3-align-left navBar__group"
  >
    NavBarItemDesktop
    NavBarItemDesktop
    NavBarItemDesktop
  </div>
</div>
`;

exports[`should render properly on mobile size 1`] = `
<div
  className="bp3-navbar navBar bp3-dark"
>
  <div
    className="bp3-navbar-group bp3-align-left navBar__group"
  >
    NavBarItemTablet
    NavBarItemTablet
    NavBarItemTablet
  </div>
</div>
`;

exports[`should render properly with custom component 1`] = `
<div
  className="bp3-navbar navBar bp3-dark"
>
  <div
    className="bp3-navbar-group bp3-align-left navBar__group"
  >
    <button
      type="button"
    >
      click me
    </button>
    <img
      alt="login logo"
      src="log-in.svg"
    />
    <div>
      check me
      <input
        type="checkbox"
      />
    </div>
    <div>
      search me
      <input
        type="text"
      />
    </div>
  </div>
</div>
`;
